fix rendering problems

--- a/content/11_Statistics.ipynb
+++ b/content/11_Statistics.ipynb
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {
     "tags": [
      "hide_input"
@@ -344,18 +344,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean (\"blue\") = -0.01\n",
-      "sd (\"blue\")   = 0.20\n",
-      "mean (\"blue\") = 0.07\n",
-      "sd (\"blue\")   = 0.20\n"
+      "mean (\"blue\")   = -0.01\n",
+      "sd   (\"blue\")   = 0.20\n",
+      "mean (\"orange\") = 0.07\n",
+      "sd   (\"orange\") = 0.20\n"
      ]
     }
    ],
    "source": [
-    "print('mean (\"blue\") = %.2f' % np.mean(s1))\n",
-    "print('sd (\"blue\")   = %.2f' % np.std(s1))\n",
-    "print('mean (\"blue\") = %.2f' % np.mean(s2))\n",
-    "print('sd (\"blue\")   = %.2f' % np.std(s2))"
+    "print('mean (\"blue\")   = %.2f' % np.mean(s1))\n",
+    "print('sd   (\"blue\")   = %.2f' % np.std(s1))\n",
+    "print('mean (\"orange\") = %.2f' % np.mean(s2))\n",
+    "print('sd   (\"orange\") = %.2f' % np.std(s2))"
    ]
   },
   {
@@ -374,12 +374,12 @@
     "\n",
     "| Cohen's $d$    | Effect size |\n",
     "|----------------|-------------|\n",
-    "| $|d| \\geq 0.01$| Very small  |\n",
-    "| $|d| \\geq 0.2$ | Small       |\n",
-    "| $|d| \\geq 0.5$ | Medium      |\n",
-    "| $|d| \\geq 0.8$ | Large       |\n",
-    "| $|d| \\geq 1.2$ | Very large  |\n",
-    "| $|d| \\geq 2.0$ | Huge        |\n",
+    "| $\\vert d \\vert \\geq 0.01$| Very small  |\n",
+    "| $\\vert d \\vert \\geq 0.2$ | Small       |\n",
+    "| $\\vert d \\vert \\geq 0.5$ | Medium      |\n",
+    "| $\\vert d \\vert \\geq 0.8$ | Large       |\n",
+    "| $\\vert d \\vert \\geq 1.2$ | Very large  |\n",
+    "| $\\vert d \\vert \\geq 2.0$ | Huge        |\n",
     "\n",
     "We note that this table was designed for use within the social sciences. Regardless, these values are broadly used, independent of the domain. \n",
     "\n",
