Fixes several typos in chapter 7

--- a/content/07_Classification.ipynb
+++ b/content/07_Classification.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "### The Formal Problem\n",
     "\n",
-    "Formally, we have a set of objects $O = \\{object_1, object_2, ...\\}$ that may be infinite. Moreover, we have representations of these objects in a feature space $\\mathcal{F} \\{\\phi(o): o \\in O\\}$ and a finite set of classes $C = \\{class_1, ..., class_n\\}$. \n",
+    "Formally, we have a set of objects $O = \\{object_1, object_2, ...\\}$ that may be infinite. Moreover, we have representations of these objects in a feature space $\\mathcal{F} = \\{\\phi(o): o \\in O\\}$ and a finite set of classes $C = \\{class_1, ..., class_n\\}$. \n",
     "\n",
     "The classification is defined by a *target concept* that maps objects to classes, i.e.,  $$h^*: O \\to C.$$ The target concept is our ground truth, i.e., a perfect assignment of objects to the classes. Usually, we have no mathematical description for the target concept. For example, there is no such mathematical description for the classification of images as whale pictures and bear pictures. The *hypothesis* maps features to classes $$h: \\mathcal{F} \\to C.$$ The hypothesis is determined by a classification algorithm with the goal to approximate the target concept such that $$h^*(o) \\approx h(\\phi(o)).$$\n",
     "\n",
@@ -175,7 +175,7 @@
     "\n",
     "| Metric | Description | Definition |\n",
     "|--------|-------------|------------|\n",
-    "| True positive rate, recall, sensitivity | Percentage of positive instances that are predicted correctly. | $TPR = \\frac{FP}{TP+FN}$ |\n",
+    "| True positive rate, recall, sensitivity | Percentage of positive instances that are predicted correctly. | $TPR = \\frac{TP}{TP+FN}$ |\n",
     "| True negative rate, specificity | Percentage of negative instances that are predicted correctly. | $TNR = \\frac{TN}{TN+FP}$ |\n",
     "| False negative rate | Percentage of positive instances that are predicted incorrectly as negative. | $FNR = \\frac{FN}{FN+TP}$ |\n",
     "| False positive rate | Percentage of negative values that are predicted incorrectly as positive. | $FPR = \\frac{FP}{FP+TN}$ |\n",
@@ -768,9 +768,9 @@
     "\n",
     "The *conditional entropy* tells us the uncertainty of the classification, if we have perfect information about a feature and is defined as\n",
     "\n",
-    "$$H(C|X') = -\\sum_{x \\in X'} \\sum_{c \\in C} p(c|x) \\log(p|x)$$\n",
+    "$$H(C|X') = -\\sum_{x \\in X'} \\sum_{c \\in C} p(c|x) \\log p(c|x)$$\n",
     "\n",
-    "where $p(c|x)$ is the probability of observing the class $c$ given the value $x$ of the feature $X' \\in \\{X_1, ..., X_m\\}$. Thus, the conditional entropy is a measure for how much information about the classification if contained in the feature $X'$. The lower the conditional entropy, the smaller the uncertainty about the classification if the feature is known. Thus, features are more *informative*, if the conditional entropy is smaller. When we combine the entropy of the classification and the conditional entropy of the classification if a feature is known, we get the *information gain* as the reduction in uncertainty, i.e., \n",
+    "where $p(c|x)$ is the probability of observing the class $c$ given the value $x$ of the feature $X' \\in \\{X_1, ..., X_m\\}$. Thus, the conditional entropy is a measure for how much information about the classification is contained in the feature $X'$. The lower the conditional entropy, the smaller the uncertainty about the classification if the feature is known. Thus, features are more *informative*, if the conditional entropy is smaller. When we combine the entropy of the classification and the conditional entropy of the classification if a feature is known, we get the *information gain* as the reduction in uncertainty, i.e., \n",
     "\n",
     "$$I(C; X') = H(C)-H(C|X').$$\n",
     "\n",
@@ -1240,7 +1240,7 @@
     "\n",
     "We still have the joint probability $P(x_1, ..., x_m)$ in the denominator. However, this probability is independent of the class $c$. Since we are not really interested in the exact probability, but only in a scoring function that we can use for classification, we can just leave out the denominator, because it does not affect which class scores highest for an instance. Thus, we get\n",
     "\n",
-    "$$score(c|c_1, ..., c_m) = \\Pi_{i=1}^m P(x_i|c)P(c).$$\n",
+    "$$score(c|x_1, ..., x_m) = \\Pi_{i=1}^m P(x_i|c)P(c).$$\n",
     "\n",
     "We can calculate this scoring function and assign the class with the highest score. The open question is how $P(x_i|c)$ and $P(c)$ are calculated. For $P(c)$ this is straightforward, as this can be estimated by counting how often each class is observed in the data. \n",
     "\n",
@@ -1455,7 +1455,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On the left side, we see two circles as sample data. It is obvious that there is no line that can separate the purple instances from the yellow instances. Thus, a linear separation with an SVM is not possible. The right side shows the expansion of the data with a new feature ($x_1^2+x_2^2). When we look at the data in three dimensions, we see that the yellow data is at the bottom and the purple data is at the top. We can just cut this data with a plane to separate the data linearly, which was not possible with the original dimensions. \n",
+    "On the left side, we see two circles as sample data. It is obvious that there is no line that can separate the purple instances from the yellow instances. Thus, a linear separation with an SVM is not possible. The right side shows the expansion of the data with a new feature ($x_1^2+x_2^2$). When we look at the data in three dimensions, we see that the yellow data is at the bottom and the purple data is at the top. We can just cut this data with a plane to separate the data linearly, which was not possible with the original dimensions. \n",
     "\n",
     "The feature expansion is done using *kernel functions*. The kernel function defines how new features are calculated. The above example used a *polynomial* kernel, where the feature space is expanded using a quadratic function. This transformation can still be visualized. Other kernel transformations are more complex, e.g., the *Radial Basis Function* (RBF). Here, the radial distances between the instances are the foundation of the kernel and the resulting feature space has infinite dimensions. This can neither be visualized, nor easily used for calculations. Thus, it is - in general - not possible to visualize how the expanded feature look like. Internally, SVMs avoid to actually expand the features using the *kernel trick*, which we do not discuss in greater detail. \n",
     "\n",
@@ -1510,7 +1510,7 @@
    "source": [
     "## Neural Networks\n",
     "\n",
-    "Neural networks are based on the idea to mimic the communication between neurons in the human brain to make decisions. The general idea is relatively simple. Neurons are *activated* and *propagate* the values of their activation to other neurons. These neurons than determine their activation based on the propagated input from other neurons. \n",
+    "Neural networks are based on the idea to mimic the communication between neurons in the human brain to make decisions. The general idea is relatively simple. Neurons are *activated* and *propagate* the values of their activation to other neurons. These neurons then determine their activation based on the propagated input from other neurons. \n",
     "\n",
     "A simple neural network may look like this. "
    ]
@@ -1877,7 +1877,7 @@
     "\n",
     "Each neuron uses the weighted sum of the inputs to calculate its activation function. For example, the value of $f_{1,3}$ is calculated as\n",
     "\n",
-    "$$f_{1,1} = f_{act}(\\sum_{i=1}^3 w_i x_i)$$\n",
+    "$$f_{1,3} = f_{act}(\\sum_{i=1}^3 w_i x_i)$$\n",
     "\n",
     "where $f_{act}$ is the *activation function* of the neuron and $w_i$ are the *weights* of each input. The activation function further transforms the input. Different activation functions have different effects. The visualization below shows four common activation functions. "
    ]
@@ -1935,7 +1935,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The simplest activation function is the identity, i.e., the weighted inputs are the activation of the neuron. The *rectified  linear unit*, commonly just referred to as *RelU* is a variant of the identity, where all negative values are set to 0, i.e., there is no negative activation. The Logistic function and the tanh both have \"S shapes\". We already know the logistic function from the logistic regression. The logistic function maps the input to a probability distribution: if the weighted input is negative, the probability is less than 0.5, if the weighted input is positive, the weighted input is greater than 0.5. At around -3/+3, the output converges to -1/+1. *tanh* is roughly linear, if the weighted input is between -1 and 1. For values outside this range, the output of tanh quickly converges to -1/+1. Thus, with the exception of the identity, the other activation functions somewhat \"normalize\" extreme inputs. \n",
+    "The simplest activation function is the identity, i.e., the weighted inputs are the activation of the neuron. The *rectified  linear unit*, commonly just referred to as *RelU* is a variant of the identity, where all negative values are set to 0, i.e., there is no negative activation. The Logistic function and the tanh both have \"S shapes\". We already know the logistic function from the logistic regression. The logistic function maps the input to a probability distribution: if the weighted input is negative, the probability is less than 0.5, if the weighted input is positive, the weighted input is greater than 0.5. At around -3/+3, the output converges to 0/+1. *tanh* is roughly linear, if the weighted input is between -1 and 1. For values outside this range, the output of tanh quickly converges to -1/+1. Thus, with the exception of the identity, the other activation functions somewhat \"normalize\" extreme inputs. \n",
     "\n",
     "The user of the neural network has to define the complete structure of the neural network, i.e., how many hidden layers there are, how many neurons there are on each layer, how the neurons are connected with each other to propagate their activations, and the activation function. The training of the neural network is the estimation of the weights, i.e., the influence of each input neuron on the activation function of a neuron. Below, we show how the choice of the activation function affects the training of a MLP for the Iris data, with three fully connected hidden layers that have 100 neurons each. "
    ]
@@ -2347,7 +2347,7 @@
     "\n",
     "### Explanatory Value and Concise Representation\n",
     "\n",
-    "With the exception of the $k$-Nearest Neighbor algorithm, that requires the complete training data, all other models have a concise representation that can be serialized and used elsewhere. However, only the representations of the Decision Tree and Logistic Regress can directly be read and used by humans. \n",
+    "With the exception of the $k$-Nearest Neighbor algorithm, that requires the complete training data, all other models have a concise representation that can be serialized and used elsewhere. However, only the representations of the Decision Tree and Logistic Regression can directly be read and used by humans. \n",
     "\n",
     "There are big differences in the explanatory value of these representations. The Decision Trees can be interpreted by almost everyone, a computer science or data science background is not required. Consequently, Decision Trees can also be discussed with domain experts. The Decision Tree indirectly also shows the importance of the features, as more important features are higher in the tree. While Random Forest usually provides better predictions, they have less explanatory value than decision trees. That a human can read hundreds of decision trees and understand how a decision is made through their majority is unrealistic. However, what can be gained from Random Forests is the importance of the features: the more often a feature is used within the trees, the more important the feature. This analysis is supported by so-called *feature importance maps*. \n",
     "\n",
@@ -2368,7 +2368,7 @@
     "\n",
     "None of the algorithms can easily deal with missing features. Decision Trees and Random Forests may work to some degree with random features. For example, a feature may not be in all subtrees of a Decision Tree. All subtrees without this feature can still be used, which means many instances may still be predicted correctly. For Random Forest, one could just ignore all trees in the ensemble, in which the feature is present. Especially if the number of trees in the ensemble is huge, this approach should work well. For all other algorithms, the computations do not make sense with missing features. \n",
     "\n",
-    "While $k$-Nearest Neighbor cannot work with missing features, this algorithm is commonly used to *impute* the values for missing (see, e.g., [Barnard and Meng, 1999](https://doi.org/10.1177%2F096228029900800103)). Hence, one may argue that missing features are actually a strength of $k$-Nearest Neighbor.\n",
+    "While $k$-Nearest Neighbor cannot work with missing features, this algorithm is commonly used to *impute* the values for missing features (see, e.g., [Barnard and Meng, 1999](https://doi.org/10.1177%2F096228029900800103)). Hence, one may argue that missing features are actually a strength of $k$-Nearest Neighbor.\n",
     "\n",
     "### Correlated Features\n",
     "\n",
