--- a/content/11_Statistics.ipynb
+++ b/content/11_Statistics.ipynb
@@ -66,7 +66,7 @@
    "source": [
     "The histogram on the left looks like it has a bell shape, which indicates that the data may be normal. However, we cannot be sure, without additional analysis. It could would also be possible that the data just randomly looks like that, i.e., is some outlier and that the data is not really normal. \n",
     "\n",
-    "The histogram on the left shows two samples, to which we refer in the following as \"blue\" and \"orange\". Both look similar, but it looks like the mean value of the blue data may be a bit smaller than that of the orange data. However, this could also just be a random effect, and there is no real difference. \n",
+    "The histogram on the left shows two samples $X_1 = \\{x_1^1, ..., x_{n_1}^1\\}$ (\"blue\") and $X_2 = \\{x_1^2, ..., x_{n_2}^2\\}$ (\"orange\"). Both look similar, but it looks like the mean value of the blue data may be a bit smaller than that of the orange data. However, this could also just be a random effect, and there is no real difference. \n",
     "\n",
     "Statistics gives us the methods we need to get (probabilistic) answers to these questions. Within this Chapter, we give a short introduction into the (quite large) world of statistics. Upon completion of this chapter, you should know what hypothesis testing is, how this can be used correctly, and why hypothesis testing is often not useful, if used without additional statistical tools like effect size and confidence intervals. "
    ]
@@ -77,16 +77,16 @@
    "source": [
     "## Hypothesis Testing\n",
     "\n",
-    "Hypothesis testing is the primary tool of *frequentist statistics*. The idea behind hypothesis testing is the following. If we have certain assumptions on the data, we can formulate these assumptions as an hypothesis about the data. We always have two hypothesis, the *null hypothesis* and the *alternative hypothesis*. \n",
+    "Hypothesis testing is the primary tool of *frequentist statistics*. The idea behind hypothesis testing is the following. If we have certain assumptions on the data, we can formulate these assumptions as an hypothesis about the data. We always have two hypotheses, the *null hypothesis* and the *alternative hypothesis*. \n",
     "\n",
     "- Null Hypothesis ($H_0$): Assumption of the test holds and is failed to be rejected at some level of significance.\n",
     "- Alternative Hypothesis ($H_1$, $H_a$): Assumption of the test does not hold and is rejected at some level of significance.\n",
     "\n",
-    "The question is, what these abstract concept mean. What exactly is the assumption of a test? What does \"(failed to be) rejected at some level of significance\" mean? Since these questions are often misunderstood and misused, we explain them using the example of the $t$-test. \n",
+    "The question is, what these abstract concepts mean. What exactly is the assumption of a test? What does \"(failed to be) rejected at some level of significance\" mean? Since these questions are often misunderstood and misused, we explain them using the example of the $t$-test. \n",
     "\n",
     "### $t$-Test\n",
     "\n",
-    "The $t$-Test can be seen as the father of all statistical tests and was first introduced by William Gosset under the pseodonym \"Student\". This oldest version of the test and the related probability distribution are there called Student's $t$-Test and Student's distribution. Here, we consider a newer variant of the $t$-Test, i.e., Welch's $t$-Test. Welch's $t$-Test has the following null and alternative hypotheses: \n",
+    "The $t$-Test can be seen as the father of all statistical tests and was first introduced by William Gosset under the pseudonym \"Student\". This oldest version of the test and the related probability distribution are there called Student's $t$-Test and Student's distribution. Here, we consider a newer variant of the $t$-Test, i.e., Welch's $t$-Test. Welch's $t$-Test has the following null and alternative hypotheses: \n",
     "\n",
     "- $H_0$: The means of two normally distributed populations $X_1$ and $X_2$ are equal.\n",
     "- $H_a$: $X_1$ and $X_2$ are not from two normally distributed populations with equal mean values.\n",
@@ -138,7 +138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This distribution looks similar to the normal distribution, the difference is that the tails are a bit longer than those of the normal distribution. Student's $t$-distribution is defined as the distribution of the  deviation of the arithmetic mean of a sample drawn from a standard normal distribution with a mean value of 0 and a standard deviation of 1 deviates. Thus, the $t$-Distribution tells us how much deviation of the mean values between two samples drawn from a standard normal distributions we can expect. This is directly related to the likelihood of the data, given the hypothesis that data is normal. \n",
+    "This distribution looks similar to the normal distribution, the difference is that the tails are a bit longer than those of the normal distribution. Student's $t$-distribution is defined as the distribution of the deviation of the arithmetic mean of a sample drawn from a standard normal distribution with a mean value of 0 and a standard deviation of 1. Thus, the $t$-Distribution tells us how much deviation of the mean values between two samples drawn from a standard normal distribution we can expect. This is directly related to the likelihood of the data, given the hypothesis that data is normal. \n",
     "\n",
     "The difference we still have is that the $t$ distribution is for a specific mean value and standard deviation, while our hypothesis is for normal distributions with any mean value and standard distribution. This is why we need a *test statistic*, in case of the $t$-Test the $t$ value, which is defined as\n",
     "\n",
@@ -218,7 +218,7 @@
     "- ANOVA (F-Test): The mean values of a group normally distributed populations with equal variances are equal.\n",
     "- Kolmogorov-Smirnoff Test: Two populations have the same probability distribution.\n",
     "\n",
-    "We already know that we can use Welch's $t$-Test to determine if the means of two normal distributions are significantly different. In case the data is not normal, we can use the Mann-Whitney-U Test instead. We can use the Shapiro-Wilk Test to determine if our samples are normal, e.g., to decide which test to use for the difference in the central tendency. When we have more than one populations, we can use ANOVA to test for differences in the central tendency, given the data is normal and all variances are the same. Levene's tests can be used to determine if is this is the case. \n",
+    "We already know that we can use Welch's $t$-Test to determine if the means of two normal distributions are significantly different. In case the data is not normal, we can use the Mann-Whitney-U Test instead. We can use the Shapiro-Wilk Test to determine if our samples are normal, e.g., to decide which test to use for the difference in the central tendency. When we have more than one population, we can use ANOVA to test for differences in the central tendency, given the data is normal and all variances are the same. Levene's tests can be used to determine if is this is the case. \n",
     "\n",
     "In general, we say that a test is *parametric* if the tests has assumptions about the distribution of the data (e.g., that the data must be normal), and *non-parametric* if the test does not make such assumption. Welch's $t$-Test is an example of parametric test, the Mann-Whitney-U Test is the non-parametric counterpart. \n",
     "\n",
@@ -311,13 +311,13 @@
     "\n",
     "First, people often use hypothesis testing to make binary statements, e.g., \"the data is normal\" instead of \"the statistical test indicates that the data is likely normal\". This is a big difference: one leaves room for the expected errors with hypothesis testing, the other is an absolute statement indicating that this is true. That these mistakes happen (a lot!), is understandable. Writing about the results of statistical tests in a correct way is hard, because you have to be careful to avoid binary statements, while still drawing relevant conclusions. Regardless, good scientific practice mandates that this should be avoided. \n",
     "\n",
-    "Second, p-values are misused because many people do not understand what the p-values. This is why there are many researchers advocating that hypothesis testing and p-values should be abolished, in favor of other methods. There are also many reseachers who say that abolishing p-values would not solve the problem that people do not understand statistics, which is the reason for the misuse. The two most important misuses *scoring* and *p-hacking*. \n",
+    "Second, p-values are misused because many people do not understand what the p-values. This is why there are many researchers advocating that hypothesis testing and p-values should be abolished, in favor of other methods. There are also many researchers who say that abolishing p-values would not solve the problem that people do not understand statistics, which is the reason for the misuse. The two most important misuses *scoring* and *p-hacking*. \n",
     "\n",
     "Scoring means that the p-values are used as scores and the differences between populations are *ranked* using the p-values. This does not make any sense, because the p-values are not the probability that the hypothesis is true, but rather that the data was generated given that the hypothesis is true. Thus, ranking of p-values would mean that we somehow score the data, which is not the intend. \n",
     "\n",
     "The other problem, the p-hacking, often happens inadvertently. As discussed above, the p-value is the probability that the data was generated, given the hypothesis. Thus, if the p-value is 0.05, there would be a 5% probability that this data was generated, given the hypothesis. In other words, there already is the expectation that there are *false positive test results*, i.e., that we sometimes reject the null hypothesis, even if the null hypothesis is true. In general, this is not a problem, if we keep this probability low. However, if you conduct 20 tests and each test has a 5% probability that the test is a false positive, it is almost certain that there are false positive results. This effect can be countered by *adjusting* the p-value, e.g., with [Bonferroni correction](https://mathworld.wolfram.com/BonferroniCorrection.html). \n",
     "\n",
-    "Such p-hacking also often happens inadvertantly through *subgroup analysis*. A famous example of this is [this article](https://doi.org/10.1016/S0140-6736(88)92833-4), where the authors were forced to conduct subgroup analysis that were not planned. To demonstrate that this likely leads to false positive results, they included an analysis of the impact of the zodiac signs on the treatment."
+    "Such p-hacking also often happens inadvertently through *subgroup analysis*. A famous example of this is [this article](https://doi.org/10.1016/S0140-6736(88)92833-4), where the authors were forced to conduct subgroup analysis that were not planned. To demonstrate that this likely leads to false positive results, they included an analysis of the impact of the zodiac signs on the treatment."
    ]
   },
   {
@@ -326,7 +326,7 @@
    "source": [
     "## Effect Sizes\n",
     "\n",
-    "An often forgotten aspect of statistical tests is that significant is not the same as meaningful. In our example, we have two normal distributions with the following arithmetic mean and standard deviation."
+    "An often-forgotten aspect of statistical tests is that significant is not the same as meaningful. In our example, we have two normal distributions with the following arithmetic mean and standard deviation."
    ]
   },
   {
@@ -585,7 +585,7 @@
     "\n",
     "While many publications still rely only on reporting the p-value and simply state that a result is significant, good statistical reporting goes beyond this and also considers additional aspects, such as effect sizes and confidence intervals. Moreover, all statistical analysis should be planned beforehand and not be conducted in an exploratory fashion, as this leads to p-hacking. Therefore, many scientific fields are turning towards *registered reports*, where the planned statistical analysis is described in detail before conducting the study. This in an effective measure to prevent exploratory statistics, which lead to false positive findings. \n",
     "\n",
-    "Moreover, the statistics we discussed here is *frequentist statistics*. Good reporting may also use a completely different approach, i.e., *Bayesian statistics*. Bayesian statistics is based on Bayes theorom and evaluates data through the estimation of the *degree of believe* in an outcome. Scientists in favor of Bayesian approaches argue that the results are often easier to interpret than frequentist statistics and better aligned with the actual research questions. "
+    "Moreover, the statistics we discussed here is *frequentist statistics*. Good reporting may also use a completely different approach, i.e., *Bayesian statistics*. Bayesian statistics is based on Bayes theorem and evaluates data through the estimation of the *degree of believe* in an outcome. Scientists in favor of Bayesian approaches argue that the results are often easier to interpret than frequentist statistics and better aligned with the actual research questions. "
    ]
   }
  ],
