--- a/content/Exercises.ipynb
+++ b/content/Exercises.ipynb
@@ -16,7 +16,8 @@
     "- [Classification](exercises/Exercise_Classification)\n",
     "- [Regression](exercises/Exercise_Regression)\n",
     "- [Time Series Analysis](exercises/Exercise_Time_Series_Analysis)\n",
-    "- [Text Mining](exercises/Exercise_Text_Mining)"
+    "- [Text Mining](exercises/Exercise_Text_Mining)\n",
+    "- [Statistics](exercises/Exercise_Statistics)"
    ]
   }
  ],
