solution for statistics exercise

--- a/content/Solutions.ipynb
+++ b/content/Solutions.ipynb
@@ -15,7 +15,8 @@
     "- [Classification](exercises/Solution_Classification)\n",
     "- [Regression](exercises/Solution_Regression)\n",
     "- [Time Series Analysis](exercises/Solution_Time_Series_Analysis)\n",
-    "- [Text Mining](exercises/Solution_Text_Mining)"
+    "- [Text Mining](exercises/Solution_Text_Mining)\n",
+    "- [Statistics](exercises/Solution_Statistics)"
    ]
   }
  ],
